Added floor picking and changing floors with buttons

--- a/index.html
+++ b/index.html
@@ -84,6 +84,53 @@
             <button class="button button-primary">Смотреть квартиры на этаже</button>
         </div>
     </main>
+    <div class="modal">
+        <div class="modal-dialog">
+            <button class="modal-close-button">
+                <img src="/img/Modal/close.svg" alt="Close button">
+            </button>
+            <div class="modal-image">
+                <h3 class="modal-title">Этаж <span class="counter">07</span></h3>
+                <img src="/img/Modal/floor.png" alt="Floor picking">
+            </div>
+            <div class="modal-info">
+                <h3 class="modal-title">Выберите квартиру</h3>
+                <ul class="flat-list">
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 50 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 50 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 50 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 50 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 50 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 50 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 50 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 50 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 50 кв. м.</a>
+                    </li>
+                    <li class="flat-item">
+                        <a href="" class="flat-link">кв. 40, 2 комн. 50 кв. м.</a>
+                    </li>
+                </ul>
+                <p class="modal-alert">Квартиры, отмеченные серым <br> уже выкуплены</p>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous">
     </script>
